--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -2,12 +2,13 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '17 4 * * *' # Runs daily at 04:17 UTC
-  workflow_dispatch:     # Allows manual runs too
+    - cron: '17 4 * * *'  # Runs daily at 04:17 UTC
+  workflow_dispatch:       # Optional manual trigger
 
 jobs:
-  commit-job:
+  daily-commit:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -15,8 +16,13 @@ jobs:
       - name: Add commit for 22f1001519@ds.study.iitm.ac.in
         run: |
           echo "Daily update: $(date -u)" >> daily_log.txt
+
+      - name: Push commit to GitHub
+        env:
+          TOKEN: ${{ secrets.GH_PAT }}
+        run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add daily_log.txt
           git commit -m "Daily update: $(date -u)"
-          git push
+          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
